--- a/src/assets/pages/contato/contato.html
+++ b/src/assets/pages/contato/contato.html
@@ -17,6 +17,14 @@
 </head>
 
 <body>
+    <div class="preloader active-preloader">
+        <svg id="preloader" width="150" height="150" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M97.3 13.9v7.757a55.6 55.6 0 0 0-27.8-7.562 53.682 53.682 0 0 0-39.225 16.18A53.375 53.375 0 0 0 13.9 69.5a53.653 53.653 0 0 0 16.291 39.31 53.45 53.45 0 0 0 39.31 16.29 54.676 54.676 0 0 0 28.995-8.34c1.13 2.42 2.899 4.487 5.115 5.977a12.835 12.835 0 0 0 7.589 2.363h13.9V13.9H97.3ZM79.425 53.015a7.257 7.257 0 0 1 8.34-6.811 8.924 8.924 0 0 1 5.921 10.175 7.228 7.228 0 0 1-8.34 6.81 8.924 8.924 0 0 1-5.921-10.174ZM63.412 37.197a7.644 7.644 0 0 1 10.815 3.53 9.369 9.369 0 0 1-1.974 12.232 7.645 7.645 0 0 1-10.815-3.53 9.369 9.369 0 0 1 1.974-12.232Zm-18.098 7.867a7.617 7.617 0 0 1 10.815 3.53 9.369 9.369 0 0 1-1.974 12.233 7.62 7.62 0 0 1-10.814-3.559 9.34 9.34 0 0 1 1.973-12.204Zm4.865 33.36a7.254 7.254 0 0 1-10.703 1.474 8.924 8.924 0 0 1-3.335-11.232 7.255 7.255 0 0 1 10.703-1.473 8.924 8.924 0 0 1 3.335 11.259v-.028Zm43.424 9.146c-4.893 3.753-12.065-.583-18.014 1.946-6.088 2.224-8.313 10.564-14.428 11.148-6.117.584-10.815-5.977-5.227-18.07 3.78-8.34 2.78-15.206 9.508-18.125 6.727-2.92 10.98 3.169 19.46 6.477C97.3 75.783 98.496 83.817 93.603 87.57Z"
+                fill="none" stroke="#3772FF" stroke-width="6" />
+        </svg>
+    </div>
+
     <header class="pet-header position-absolute w-100 mt-2 mt-sm-0 p-4 p-sm-5 container-fluid">
         <div class="row  justify-content-between align-items-center p-1 mx-xl-5 w-100">
             <div class="d-flex w-75">
@@ -36,27 +44,34 @@
 
     <main class="pet-contact pet-color-bg-custom">
         <section class="container pet-contact__section">
-            <h1 class="color-txt-1 text-center col-10 col-md-8 col-xl-6 mx-auto pet-contact__title">Envie uma mensagem para a pessoa ou instituição que está cuidando do animal:</h1>
+            <h1 class="color-txt-1 text-center col-10 col-md-8 col-xl-6 mx-auto pet-contact__title">Envie uma mensagem
+                para a pessoa ou instituição que está cuidando do animal:</h1>
 
             <form action="" class="pet-contact__form col-10 col-md-8 col-lg-10 col-xl-6 mx-auto">
                 <fieldset class="mb-3 pet-contact__control">
-                    <label for="input-nome-contato" class="form-label pet-contact__label color-txt-1 fw-bold">Nome</label>
+                    <label for="input-nome-contato"
+                        class="form-label pet-contact__label color-txt-1 fw-bold">Nome</label>
                     <input type="text" class="form-control pet-contact__input" id="input-nome-contato"
                         placeholder="Insira seu nome completo">
                 </fieldset>
 
                 <fieldset class="mb-3 pet-contact__control">
-                    <label for="input-telefone-contato" class="form-label pet-contact__label color-txt-1 fw-bold">Telefone</label>
-                    <input type="text" class="form-control pet-contact__input" id="input-telefone-contato" placeholder="Insira seu telefone e/ou whatsapp">
+                    <label for="input-telefone-contato"
+                        class="form-label pet-contact__label color-txt-1 fw-bold">Telefone</label>
+                    <input type="text" class="form-control pet-contact__input" id="input-telefone-contato"
+                        placeholder="Insira seu telefone e/ou whatsapp">
                 </fieldset>
 
                 <fieldset class="mb-3 pet-contact__control">
-                    <label for="input-animal-contato" class="form-label pet-contact__label color-txt-1 fw-bold">Nome do animal</label>
-                    <input type="text" class="form-control pet-contact__input" id="input-animal-contato" placeholder="Por qual animal você se interessou?">
+                    <label for="input-animal-contato" class="form-label pet-contact__label color-txt-1 fw-bold">Nome do
+                        animal</label>
+                    <input type="text" class="form-control pet-contact__input" id="input-animal-contato"
+                        placeholder="Por qual animal você se interessou?">
                 </fieldset>
 
                 <fieldset class="mb-3 pet-contact__control">
-                    <label for="textarea-mensagem-contato" class="form-label pet-contact__label color-txt-1 fw-bold">Mensagem</label>
+                    <label for="textarea-mensagem-contato"
+                        class="form-label pet-contact__label color-txt-1 fw-bold">Mensagem</label>
                     <textarea class="form-control pet-contact__textarea" id="textarea-mensagem-contato" rows="3"
                         placeholder="Escreva sua mensagem"></textarea>
                 </fieldset>
@@ -79,6 +94,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vivus@latest/dist/vivus.min.js"></script>
+    <script src="../../js/preloader.js"></script>
 </body>
 
 </html>
