--- a/src/assets/pages/galeria/galeria.html
+++ b/src/assets/pages/galeria/galeria.html
@@ -17,6 +17,14 @@
 </head>
 
 <body>
+    <div class="preloader active-preloader">
+        <svg id="preloader" width="150" height="150" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+                d="M97.3 13.9v7.757a55.6 55.6 0 0 0-27.8-7.562 53.682 53.682 0 0 0-39.225 16.18A53.375 53.375 0 0 0 13.9 69.5a53.653 53.653 0 0 0 16.291 39.31 53.45 53.45 0 0 0 39.31 16.29 54.676 54.676 0 0 0 28.995-8.34c1.13 2.42 2.899 4.487 5.115 5.977a12.835 12.835 0 0 0 7.589 2.363h13.9V13.9H97.3ZM79.425 53.015a7.257 7.257 0 0 1 8.34-6.811 8.924 8.924 0 0 1 5.921 10.175 7.228 7.228 0 0 1-8.34 6.81 8.924 8.924 0 0 1-5.921-10.174ZM63.412 37.197a7.644 7.644 0 0 1 10.815 3.53 9.369 9.369 0 0 1-1.974 12.232 7.645 7.645 0 0 1-10.815-3.53 9.369 9.369 0 0 1 1.974-12.232Zm-18.098 7.867a7.617 7.617 0 0 1 10.815 3.53 9.369 9.369 0 0 1-1.974 12.233 7.62 7.62 0 0 1-10.814-3.559 9.34 9.34 0 0 1 1.973-12.204Zm4.865 33.36a7.254 7.254 0 0 1-10.703 1.474 8.924 8.924 0 0 1-3.335-11.232 7.255 7.255 0 0 1 10.703-1.473 8.924 8.924 0 0 1 3.335 11.259v-.028Zm43.424 9.146c-4.893 3.753-12.065-.583-18.014 1.946-6.088 2.224-8.313 10.564-14.428 11.148-6.117.584-10.815-5.977-5.227-18.07 3.78-8.34 2.78-15.206 9.508-18.125 6.727-2.92 10.98 3.169 19.46 6.477C97.3 75.783 98.496 83.817 93.603 87.57Z"
+                fill="none" stroke="#3772FF" stroke-width="6" />
+        </svg>
+    </div>
+
     <header class="pet-header position-absolute w-100 mt-2 mt-sm-0 p-4 p-sm-5 container-fluid">
         <div class="row  justify-content-between align-items-center p-1 mx-xl-5 w-100">
             <div class="d-flex w-75">
@@ -38,11 +46,12 @@
         <section class="container-fluid pet-template pet-template__ilustracao p-0">
             <div class="row pt-5 mt-5">
                 <div class="col-8 col-sm-6 offset-1 mt-3 mb-5 pt-5 mx-auto">
-                    <h2 class="text-center color-txt-1 fw-normal pet-gallery__title">Olá! Veja os amigos disponíveis para adoção!</h2>
+                    <h2 class="text-center color-txt-1 fw-normal pet-gallery__title">Olá! Veja os amigos disponíveis
+                        para adoção!</h2>
                 </div>
                 <div class="col-10 col-sm-12 col-lg-8 col-xl-10 col-xxl-8 p-0 p-sm-2 mx-auto mt-3">
                     <div class="row p-sm-3 p-md-0" id="list-petz">
-                      
+
                     </div>
                 </div>
             </div>
@@ -62,7 +71,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/vivus@latest/dist/vivus.min.js"></script>
+    <script src="../../js/preloader.js"></script>
     <script src="/src/assets/js/galleryColletion.js"></script>
 </body>
 
